changed the weathersection

--- a/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Ubisunt.css
+++ b/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Ubisunt.css
@@ -17,6 +17,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color:darkolivegreen;
+    background-color:rgb(50, 61, 29);
     height: 40rem;
 }
