--- a/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Gallery.css
+++ b/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Gallery.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-evenly;
     background-color: rgb(22, 26, 26);
+    height: 55rem;
 } 
 
 
@@ -10,17 +11,16 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
-    margin-top: 4rem;
-    margin-bottom: -6rem;
-    height: 2080px;
+    grid-auto-rows: minmax(auto, auto);
+    margin-top: 1rem;
+    height: 720px;
     }
  
 
 .imgSmll{
-    height: 320px;
+    height: 120px;
     margin: 1rem;
-    border: 5px solid whitesmoke;
+    border: 2px solid whitesmoke;
     }
 
 
@@ -28,13 +28,13 @@
     font-size: 600%;
     background-color: rgb(22, 26, 26);
     color:whitesmoke;
-    padding: 9rem;
+    padding: 4rem;
 }
 
 .background{
     background-color: rgb(22, 26, 26);
     color:whitesmoke;
-    padding-bottom: 9rem;
+    padding-bottom: 1rem;
 }
 
 .btn-warning{
