--- a/Skola/projektarbete-react-ht21/projektarbete/src/Components/Common/ImageView.css
+++ b/Skola/projektarbete-react-ht21/projektarbete/src/Components/Common/ImageView.css
@@ -1,16 +1,17 @@
 .image-bg{
-    background-color: rgb(22, 26, 26);
     height: 1080px;
 }
 
 
 .bigImage{
     margin-top: 9rem;
-    margin-bottom: 9rem;
+    margin-bottom: 1rem;
     height: 720px;
+    border: 1px solid white;
 }
 
 .image-des{
     color: whitesmoke;
+    width: 90rem;
 
 }
