--- a/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Gallery.css
+++ b/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Gallery.css
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: space-evenly;
     background-color: rgb(22, 26, 26);
-    height: 55rem;
 } 
 
 
@@ -28,7 +27,7 @@
     font-size: 600%;
     background-color: rgb(22, 26, 26);
     color:whitesmoke;
-    padding: 4rem;
+    padding-top: 14rem;
 }
 
 .background{
