--- a/Skola/projektarbete-react-ht21/projektarbete/src/Components/Common/ImageView.css
+++ b/Skola/projektarbete-react-ht21/projektarbete/src/Components/Common/ImageView.css
@@ -1,10 +1,13 @@
 .image-bg{
     height: 1080px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
 .bigImage{
-    margin-top: 9rem;
+    margin-top: 2rem;
     margin-bottom: 1rem;
     height: 720px;
     border: 1px solid white;
@@ -12,6 +15,6 @@
 
 .image-des{
     color: whitesmoke;
-    width: 90rem;
+    width: 720px;
 
 }
