tweaked the mastery component so that years use trunc instead of round

--- a/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Mastery.css
+++ b/Skola/projektarbete-react-ht21/projektarbete/src/Components/Sections/Mastery.css
@@ -1,7 +1,5 @@
 .mastery{
-
-
-    background-color: cadetblue;
+    background-color: rgb(110, 95, 46);
     height: 70rem;
     color: whitesmoke;
 }
